--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ h1{
 /* SECTIONS */
 
 .meme-generator {
-    background-color: #10564F;
+    background-color: var(--clr3);
     width: 100%;
     height: 100%;
     display: grid;
@@ -200,4 +200,17 @@ img:not(.btnImg) {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.stroke-picker{
+    background-image: url(imgs/icons/letter-s.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+@media (max-width: 600px){
+    .meme-generator{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
 }
