--- a/css/style.css
+++ b/css/style.css
@@ -5,29 +5,31 @@
     --clr3: #DBEBED;
     --clr4: #FFFFFF;
 }
-
-
-*{
+* {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 @font-face {
     font-family: Heading;
     src: url(fonts/AirtravelerspersonaluseBdit-ow59x.otf);
 }
-
-body{
+body {
     margin: 0;
     height: 100vh;
 }
-
-h1{
+h1 {
     font-family: Heading;
 }
+button {
+    background-color: var(--clr2);
+    border: none;
+    border-radius: 5px;
+}
 
-
-
+button:hover {
+    background-color: var(--clr3);
+    border: 1px solid black;
+}
 
 /* Main Layout */
 
@@ -38,11 +40,9 @@ h1{
     grid-template-rows: 75px 1fr;
 }
 
-
-
 /* Main Header */
 
-.main-header{
+.main-header {
     background-color: var(--clr2);
     color: var(--clr4);
     width: 100%;
@@ -63,7 +63,8 @@ h1{
     justify-content: center;
 
 }
-.main-nav li a{
+
+.main-nav li a {
     text-decoration: none;
     color: white;
     width: 75px;
@@ -73,13 +74,28 @@ h1{
     justify-content: center;
 }
 
-.main-nav li a:hover{
+.main-nav li a:hover {
     box-shadow: inset 0px -3px 0px 0px
 }
 
 
 /* SECTIONS */
 
+/* Gallery */
+
+.gallery{
+    display: grid;
+    grid-template-rows: 0.1fr 1fr;
+}
+.gallery-sort{
+    display: grid;
+    grid-template-columns: 0.1fr 0.2fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+}
+
+
+/* MEME GENERATOR */
 .meme-generator {
     background-color: var(--clr3);
     width: 100%;
@@ -88,8 +104,9 @@ h1{
     grid-template-columns: 2fr 1fr;
     gap: 10px;
 }
+
 /* canvas container */
-.canvas-container{
+.canvas-container {
     height: 100%;
     display: grid;
     align-items: center;
@@ -97,11 +114,11 @@ h1{
 }
 
 /* control box */
-.control-box{
+.control-box {
     background-color: var(--clr3);
     display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-template-rows: repeat(6,1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(6, 1fr);
     padding: 50px;
     gap: 20px;
 }
@@ -111,61 +128,74 @@ h1{
     border-radius: 5px;
     font-size: 2em;
 }
-.text-manipulation{
+
+.text-manipulation {
     grid-column: 1 / span 5;
     grid-row: 3 / 5;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr 1fr;
-    /* padding: 20px; */
-    /* justify-items: center; */
-    /* align-items: center; */
     gap: 20px;
+    padding: 15px;
 }
+
 .stickers {
     grid-column: 1 /span 5;
     background-color: #DBEBED;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
 }
+.stickers .emojies-display {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.stickers .emojies-display .emoji-preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .options {
     grid-column: 1 /span 5;
-    /* background-color: #DBEBED; */
     display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-template-areas: 'share share . download download';
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-areas: 'share share save download download';
+    background-color: var(--clr3);
+    padding: 15px;
 }
-.selector{
+.selector {
     grid-column: span 3;
     border-radius: 5px;
 }
-
 .share {
     grid-area: share;
 }
-.download{
+.save{
+    grid-area: save;
+    margin-inline: 5px;
+}
+.download {
     grid-area: download;
+}
+.download-btn{
+    width: 100%;
+    height: 100%;
 }
 
 
 
 
 /* Helpers */
-/* list helper */
 .clean-list {
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
+.hide {
+    display: none;
+}
 
 
-button{
-    background-color: var(--clr2);
-    border: none;
-    border-radius: 5px;
-}
-button:hover{
-    background-color: var(--clr3);
-    border: 1px solid black;
-}
 
 img:not(.btnImg) {
     width: 75px;
@@ -173,43 +203,14 @@ img:not(.btnImg) {
     margin: 5px;
 }
 
-.hide {
-    display: none;
-}
-
-.invisible{
-    visibility: 0;
-}
-
-.btnImg{
+.btnImg {
     width: 26px;
     aspect-ratio: 1/1;
 }
 
-.stickers{
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr; 
-}
 
-.stickers .emojies-display{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-}
-
-.stickers .emojies-display .emoji-preview{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.stroke-picker{
-    background-image: url(imgs/icons/letter-s.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-@media (max-width: 600px){
-    .meme-generator{
+@media (max-width: 600px) {
+    .meme-generator {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     }
