--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ button:hover {
 }
 .gallery-sort{
     display: grid;
-    grid-template-columns: 0.1fr 0.2fr 1fr;
+    grid-template-columns: 0.1fr 0.1fr 0.3fr 1fr;
     grid-template-rows: 1fr;
     align-items: center;
 }
@@ -135,8 +135,8 @@ button:hover {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr 1fr;
-    gap: 20px;
-    padding: 15px;
+    gap: 5px;
+    /* padding: 15px; */
 }
 
 .stickers {
@@ -208,10 +208,26 @@ img:not(.btnImg) {
     aspect-ratio: 1/1;
 }
 
-
-@media (max-width: 600px) {
-    .meme-generator {
+/* Medium */
+@media (min-width: 700px) {
+    /* .meme-generator {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     }
+    .canvas-place{
+        width: 100%;
+        height: 100%;
+    } */
+}
+
+/* Large */
+@media (min-width: 940px) {
+    /* .meme-generator {
+        width: 700px;
+        margin: auto;
+    }
+    .canvas-place{
+        width: 300px;
+        height: 300px;
+    } */
 }
