--- a/css/style2.css
+++ b/css/style2.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+@font-face {
+    font-family: fredoka;
+    src: url(fonts/FredokaOne-Regular.ttf);
+}
 
 body {
     height: 100vh;
@@ -170,15 +174,8 @@ body {
 
 .control-box .text-manipulation .pallete-holder {
     position: relative;
-    /* position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0; */
 }
 .text-manipulation .pallete-holder .pallete {
-    /* position: relative; */
     position: absolute;
     top: 0;
     left: 0;
@@ -197,6 +194,18 @@ body {
 
 .control-box .stickers .emojies-display {
     grid-column: span 3;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    justify-items: stretch;
+    align-items: stretch;
+    gap: 5px;
+}
+
+.control-box .emojies-display .emoji-preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.8rem;
 }
 
 /* OPTIONS */
@@ -215,11 +224,6 @@ body {
     width: 100%;
 }
 
-
-
-
-
-
 /* HELPERS */
 button {
     border-radius: 5px;
@@ -233,6 +237,37 @@ button:hover {
 .hide {
     display: none;
 }
+
+/* Modals */
+.share-modal {
+    background-color: lightgrey;
+    border: 1px solid orange;
+    padding: 5px;
+    position: fixed;
+    width: fit-content;
+    top: 0;
+    right: 50%;
+    transform: translateX(50%) translateY(-100%);
+    border-end-end-radius: 10px;
+    border-end-start-radius: 10px;
+    text-align: center;
+    transition: transform 0.4s;
+}
+.share-modal .share-container{
+    margin-bottom: 5px;
+}
+.share-modal .share-btn {
+    text-decoration: none;
+    color: black;
+    background-color: lightgray;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
+}
+.share-modal .share-btn:hover {
+    background-color: orange;
+}
+/* Media Queries */
 
 @media (min-width: 620px){
     .main-layout>*:not(.full) {
