--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,12 @@
+:root {
+    --header-clr: #FDC921;
+    --cmps-clr: #FDD85D;
+    --text-clr: #99D6EA;
+    --bg-clr: #FFFDF7;
+    --add-clr: #6798C0;
+}
+
+
 * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,11 +16,16 @@
     font-family: fredoka;
     src: url(fonts/FredokaOne-Regular.ttf);
 }
+@font-face {
+    font-family: Figno;
+    src: url(fonts/Figno-Regular.otf);
+}
 
 body {
     height: 100vh;
     margin: auto;
-    background-color: lightgrey;
+    background-color: var(--bg-clr);
+    color: var(--add-clr);
 }
 
 .main-layout>*:not(.full) {
@@ -22,7 +36,7 @@ body {
 
 /* Main Header */
 .main-header {
-    background-color: orange;
+    background-color: var(--header-clr);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -30,7 +44,9 @@ body {
 }
 
 .main-header h1 {
+    font-family: Figno;
     margin: 0;
+    margin-left: 5px;
 }
 
 .main-header .main-nav ul {
@@ -48,7 +64,7 @@ body {
 
 .main-nav li a {
     text-decoration: none;
-    color: black;
+    color: var(--add-clr);
     font-weight: bold;
     width: 75px;
     height: 75px;
@@ -60,24 +76,33 @@ body {
 .main-nav li a:hover {
     box-shadow: inset 0px -3px 0px 0px
 }
+.main-nav li a.active {
+    box-shadow: inset 0px -3px 0px 0px
+}
 
 /* Gallery */
 .gallery {
     display: flex;
     flex-direction: column;
     width: 360px;
-    height: 100%;
+    /* height: 100%; */
+    height: calc(100vh - 85px);
 }
 
 /* Gallery Sort */
 .gallery .gallery-sort {
     margin-top: 10px;
     display: grid;
-    height: 75px;
+    /* height: 75px; */
     grid-template-columns: 1fr 0.2fr;
     grid-row: 1fr 1fr;
     margin-block-end: 20px;
     gap: 5px;
+    height: calc(20vh -130px);
+    background-color: var(--cmps-clr);
+    padding: 5px;
+    border-radius: 5px;
+    height: 75px;
 }
 
 .gallery .gallery-sort .search {
@@ -97,15 +122,16 @@ body {
 
 .gallery-sort .common-words a {
     text-decoration: none;
-    color: black;
-    border: 1px solid black;
+    color: var(--add-clr);
+    /* border: 1px solid black; */
     padding: 5px;
     border-radius: 5px;
 }
+
 .gallery-sort .common-words a:hover {
-    background-color: orange;
-    color: black;
-    border: 1px solid black;
+    background-color: var(--bg-clr);
+    color: var(--add-clr);
+    /* border: 1px solid black; */
 
 }
 
@@ -113,22 +139,41 @@ body {
 /* Gallery List */
 .gallery .gallery-list {
     display: grid;
-    grid-template-columns: repeat(3, 75px);
     grid-template-rows: repeat(6, 1fr);
     justify-items: center;
-    gap: 40px;
+    gap: 10px;
     justify-content: center;
-    margin-top: 100px;
+    /* height: calc(80vh - 130px); */
+    overflow: auto;
+    background-color: var(--cmps-clr);
+    padding: 10px;
+    border-radius: 5px;
+    height: calc(100% - 75px);
+}
+
+.gallery-list::-webkit-scrollbar {
+    background-color: var(--bg-clr);
+    width: 10px
+}
+
+.gallery-list::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+.gallery-list::-webkit-scrollbar-thumb {
+    background: var(--cmps-clr);
+    border-radius: 5px;
 }
 
 .gallery .gallery-list img {
-    width: 75px;
+    width: 100%;
 
 }
 
 /* Meme Generator  */
 .meme-generator {
-    background-color: orange;
+    background-color: var(--cmps-clr);
     border-radius: 10px;
     width: max-content;
     margin: 0 auto;
@@ -237,11 +282,31 @@ body {
 }
 
 .control-box .options a {
+    text-decoration: none;
     display: flex;
 }
 
 .control-box .options .download-btn {
+    display: flex;
     width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.control-box .options .share {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.saved-memes {
+    height: calc(100vh - 95px);
+    background-color: var(--cmps-clr);
+    display: grid;
+    place-items: center;
+    margin: 10px auto 0px auto;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 /* HELPERS */
@@ -251,7 +316,7 @@ button {
 }
 
 button:hover {
-    background-color: orange;
+    background-color: var(--add-clr);
 }
 
 .hide {
@@ -260,8 +325,8 @@ button:hover {
 
 /* Modals */
 .share-modal {
-    background-color: lightgrey;
-    border: 1px solid orange;
+    background-color: var(--bg-clr);
+    border: 1px solid var(--cmps-clr);
     padding: 5px;
     position: fixed;
     width: fit-content;
@@ -313,7 +378,7 @@ button:hover {
     }
 
     .gallery .gallery-list img {
-        width: 100px;
+        width: 100%;
     }
 
     .meme-generator .canvas-container .canvas-place {
@@ -326,12 +391,14 @@ button:hover {
     .main-layout>*:not(.full) {
         width: 700px;
     }
-    .gallery .gallery-list{
+
+    .gallery .gallery-list {
         margin-top: 0px;
     }
+
     .gallery .gallery-list img {
-        width: 90px;
-        
+        width: 100%;
+
     }
 
     .meme-generator {
@@ -361,7 +428,7 @@ button:hover {
     }
 
     .gallery .gallery-list img {
-        width: 125px;
+        width: 100%;
     }
 }
 
