--- a/css/style2.css
+++ b/css/style2.css
@@ -2,7 +2,8 @@
     --header-clr: #FDC921;
     --cmps-clr: #FDD85D;
     --text-clr: #99D6EA;
-    --bg-clr: #FFFDF7;
+    --bg-clr: #6798c029;
+    ;
     --add-clr: #6798C0;
 }
 
@@ -16,12 +17,14 @@
     font-family: fredoka;
     src: url(fonts/FredokaOne-Regular.ttf);
 }
+
 @font-face {
     font-family: Figno;
     src: url(fonts/Figno-Regular.otf);
 }
 
 body {
+    /* direction: rtl; */
     height: 100vh;
     margin: auto;
     background-color: var(--bg-clr);
@@ -76,6 +79,7 @@ body {
 .main-nav li a:hover {
     box-shadow: inset 0px -3px 0px 0px
 }
+
 .main-nav li a.active {
     box-shadow: inset 0px -3px 0px 0px
 }
@@ -85,7 +89,6 @@ body {
     display: flex;
     flex-direction: column;
     width: 360px;
-    /* height: 100%; */
     height: calc(100vh - 85px);
 }
 
@@ -93,7 +96,6 @@ body {
 .gallery .gallery-sort {
     margin-top: 10px;
     display: grid;
-    /* height: 75px; */
     grid-template-columns: 1fr 0.2fr;
     grid-row: 1fr 1fr;
     margin-block-end: 20px;
@@ -106,6 +108,7 @@ body {
 }
 
 .gallery .gallery-sort .search {
+    padding-inline-start: 5px;
     border-radius: 5px;
 }
 
@@ -123,7 +126,6 @@ body {
 .gallery-sort .common-words a {
     text-decoration: none;
     color: var(--add-clr);
-    /* border: 1px solid black; */
     padding: 5px;
     border-radius: 5px;
 }
@@ -131,7 +133,6 @@ body {
 .gallery-sort .common-words a:hover {
     background-color: var(--bg-clr);
     color: var(--add-clr);
-    /* border: 1px solid black; */
 
 }
 
@@ -140,10 +141,7 @@ body {
 .gallery .gallery-list {
     display: grid;
     grid-template-rows: repeat(6, 1fr);
-    justify-items: center;
     gap: 10px;
-    justify-content: center;
-    /* height: calc(80vh - 130px); */
     overflow: auto;
     background-color: var(--cmps-clr);
     padding: 10px;
@@ -162,14 +160,21 @@ body {
 }
 
 .gallery-list::-webkit-scrollbar-thumb {
-    background: var(--cmps-clr);
+    background: var(--add-clr);
     border-radius: 5px;
 }
 
-.gallery .gallery-list img {
+.gallery .gallery-list > img {
     width: 100%;
-
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 1px;
 }
+
+.gallery .gallery-list img:hover {
+    transform: scale(1.1);
+    transition: transform .3s;
+}
+
 
 /* Meme Generator  */
 .meme-generator {
@@ -178,7 +183,6 @@ body {
     width: max-content;
     margin: 0 auto;
     margin-top: 10px;
-    /* height: 100%; */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -292,6 +296,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
 }
+
 .control-box .options .share {
     display: flex;
     width: 100%;
